[tool.poetry]
name = "wad-health-in-tech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
jupyter = "^1.1.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scikit-learn = "<1.6"
requests = "^2.32.3"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
